--- a/src/main/resources/static/upload.html
+++ b/src/main/resources/static/upload.html
@@ -3,20 +3,29 @@
 <head>
     <title>uploadimg.html</title>
 
-    <meta name="keywords" content="keyword1,keyword2,keyword3"></meta>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-    <script src="/js/test.js" type="text/javascript"></script>
+    <script src="/test.js" type="text/javascript"></script>
+    <script src="/webjars/jquery/3.1.0/jquery.js"></script>
+    <link href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
 <body>
-<form enctype="multipart/form-data" method="post" action="/upload">
-    文　件:<input type="file" name="head_img"/>
-    文　件:<input type="file" name="head_img"/>
-    文件夹:<input type="text" name="folder_name"/>
-    <input type="submit" value="上传"/>
+<form class="form-inline text-center" role="form" enctype="multipart/form-data" method="post" action="/upload">
+    <div class="form-group">
+        <label class="sr-only" for="name">文件夹</label>
+        <input type="text" class="form-control" id="name" name="folder_name" placeholder="请输入文件夹名称">
+    </div>
+    <div class="form-group">
+        <label class="sr-only" for="inputfileOne">文件输入</label>
+        <input type="file" name="head_img" id="inputfileOne">
+    </div>
+    <div class="form-group">
+        <label class="sr-only" for="inputfileTwo">文件输入</label>
+        <input type="file" name="head_img" id="inputfileTwo">
+    </div>
+    <button type="submit" class="btn btn-default">提交</button>
 </form>
-
 </body>
 </html>
